--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/content": "^3.8.2",
     "@nuxt/eslint": "1.10.0",
     "@nuxt/hints": "1.0.0-alpha.2",
-    "@nuxt/ui": "4.2.1",
+    "@nuxt/ui": "^4.2.1",
     "@nuxtjs/tailwindcss": "6.14.0",
+    "better-sqlite3": "^12.4.6",
     "eslint": "^9.0.0",
     "nuxt": "^4.2.1",
     "typescript": "^5.6.3",
     "vue": "^3.5.25",
-    "vue-router": "^4.6.3"
+    "vue-router": "^4.6.3",
+    "zod": "^4.1.13"
   }
 }
